--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             url: 'save_login_details.php',
             data: {
                 username: username,
-                password: password
+                password: password,
             },
             success: function(response) {
                 console.log('Login details saved successfully.');
